--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "sails-json-api",
     "version": "0.0.1",
-    "description": "JSON API compatible controllers, policies, services and generators for Sails v1.0+", "main": "index.js",
+    "description": "JSON API compatible controllers, policies, services and generators for Sails v1.0+",
+    "main": "index.js",
     "scripts": {
         "start": "node app.js",
         "test": "node ./node_modules/mocha/bin/mocha test/lifecycle.test.js test/integration/**/*.test.js",
-        "format": "node ./node_modules/.bin/prettier --single-quote --tab-width 2 --print-width 120 --trailing-comma none --write \"{{api,bin,config,test,templates}/**/*.js,index.js,app.js}\""
+        "format": "node ./node_modules/.bin/prettier --single-quote --tab-width 2 --print-width 120 --trailing-comma none --write \"{{api,bin,config,test,templates}/**/*.js,index.js,app.js}\"",
+        "cover": "nyc ./node_modules/mocha/bin/mocha test/lifecycle.test.js test/integration/**/*.test.js"
     },
     "keywords": [
         "json-api",
@@ -43,13 +45,14 @@
         "chai": "^4.1.2",
         "fs-extra": "6.0.1",
         "mocha": "5.2.0",
+        "nyc": "^12.0.2",
         "prettier": "1.13.5",
         "reportback": "*",
         "sails": "1.0.2",
         "sails-disk": "^1.0.0",
         "sails-generate": "^1.15.0",
         "sails-hook-orm": "^2.0.0",
-        "sails-hook-sockets": "^1.5.0",
+        "sails-hook-sockets": "^1.5.3",
         "supertest": "^3.1.0",
         "waterline": "^0.13.4"
     },
