--- a/package.json
+++ b/package.json
@@ -31,29 +31,29 @@
         "node": ">=6.0.0"
     },
     "dependencies": {
-        "json-api-serializer": "^1.13.0",
+        "json-api-serializer": "1.13.0",
         "lodash": "4.17.10",
         "pluralize": "7.0.0"
     },
     "devDependencies": {
         "async": "2.6.1",
-        "babel": "^6.23.0",
-        "babel-plugin-add-module-exports": "^0.2.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-register": "^6.24.1",
-        "chai": "^4.1.2",
+        "babel": "6.23.0",
+        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-preset-es2015": "6.24.1",
+        "babel-register": "6.24.1",
+        "chai": "4.1.2",
         "mocha": "5.2.0",
-        "nyc": "^12.0.2",
-        "prettier": "1.13.5",
+        "nyc": "12.0.2",
+        "prettier": "1.13.7",
         "sails": "1.0.2",
-        "sails-disk": "^1.0.0",
-        "sails-hook-orm": "^2.0.0",
-        "sails-hook-sockets": "^1.5.3",
-        "supertest": "^3.1.0",
-        "waterline": "^0.13.4"
+        "sails-disk": "1.0.1",
+        "sails-hook-orm": "2.0.1",
+        "sails-hook-sockets": "1.5.3",
+        "supertest": "3.1.0",
+        "waterline": "0.13.5"
     },
     "peerDependencies": {
-        "waterline": "^0.13.4",
+        "waterline": "0.13.4",
         "sails": "1.0.2"
     },
     "sails": {
