--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
         "pluralize": "7.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.4",
-        "@babel/preset-env": "^7.4.4",
-        "@babel/register": "^7.4.4",
+        "@babel/core": "7.4.4",
+        "@babel/preset-env": "7.4.4",
+        "@babel/register": "7.4.4",
         "async": "2.6.2",
         "babel-plugin-add-module-exports": "1.0.2",
         "chai": "4.2.0",
         "mocha": "6.1.4",
         "nyc": "14.1.0",
         "prettier": "1.17.0",
-        "sails": "1.0.2",
-        "sails-disk": "1.0.1",
+        "sails": "1.2.1",
+        "sails-disk": "1.1.2",
         "sails-hook-orm": "2.1.1",
         "sails-hook-sockets": "1.5.5",
         "supertest": "4.0.2",
