removed counts on relationships and returned IDs instead started simplifying actions to be more readable using native async/await rather than the async library.

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["add-module-exports"]
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-runtime", {
+      "regenerator": true
+    }],
+    "add-module-exports"
+  ]
 }
