--- a/package.json
+++ b/package.json
@@ -28,28 +28,31 @@
     "author": "Adam Gribble",
     "license": "MIT",
     "engines": {
-        "node": ">=6.0.0"
+        "node": ">= 0.10.0",
+        "npm": ">= 1.4.0"
     },
     "dependencies": {
-        "json-api-serializer": "2.3.0",
-        "lodash": "4.17.15",
+        "@babel/runtime": "^7.13.10",
+        "json-api-serializer": "2.6.1",
+        "lodash": "4.17.21",
         "pluralize": "8.0.0"
     },
     "devDependencies": {
-        "@babel/core": "7.8.4",
-        "@babel/preset-env": "7.8.4",
-        "@babel/register": "7.8.3",
-        "async": "3.1.1",
-        "babel-plugin-add-module-exports": "1.0.2",
-        "chai": "4.2.0",
-        "mocha": "7.0.1",
-        "nyc": "15.0.0",
-        "prettier": "1.19.1",
-        "sails": "1.2.3",
-        "sails-disk": "1.1.2",
-        "sails-hook-orm": "2.1.1",
+        "@babel/core": "7.13.10",
+        "@babel/plugin-transform-runtime": "^7.13.10",
+        "@babel/preset-env": "7.13.10",
+        "@babel/register": "7.13.8",
+        "async": "3.2.0",
+        "babel-plugin-add-module-exports": "1.0.4",
+        "chai": "4.3.3",
+        "mocha": "8.3.1",
+        "nyc": "15.1.0",
+        "prettier": "2.2.1",
+        "sails": "1.4.2",
+        "sails-disk": "2.1.0",
+        "sails-hook-orm": "3.0.2",
         "sails-hook-sockets": "2.0.0",
-        "supertest": "4.0.2",
+        "supertest": "6.1.3",
         "waterline": "0.13.6"
     },
     "sails": {
